--- a/roles/opennebula-node/tasks/main.yml
+++ b/roles/opennebula-node/tasks/main.yml
@@ -60,12 +60,12 @@
     - opennebula-server
     - opennebula-sunstone
 
-- name: Edit /etc/one/oned.conf so it listens in all interfaces (default is localhost only)
-  lineinfile:
-    dest: /etc/one/oned.conf
-    backup: yes
-    regexp: "^LISTEN_ADDRESS :  \"127.0.0.1\""
-    line: "LISTEN_ADDRESS :  \"0.0.0.0\""
+      #- name: Edit /etc/one/oned.conf so it listens in all interfaces (default is localhost only)
+      # lineinfile:
+      #dest: /etc/one/oned.conf
+      #backup: yes
+      #regexp: "^LISTEN_ADDRESS :  \"127.0.0.1\""
+      #line: "LISTEN_ADDRESS :  \"0.0.0.0\""
 
 - name: Get RVM Pubkey
   shell: "{{item}}"
